ui/assets/styles/hc-light.css
/* ... */
.dashboard-widget-graph-link:focus::after {
  background: #111111;
  height: 3px;
  bottom: -3px; }

.list-table .subfilter-enabled {
  background-color: #ffffff;
  box-shadow: 0 0 0 1px #000000; }
.list-table thead th {
  border-color: #909090; }
.list-table.compact-view .flh-na-bg:not(.row-selected):not(:hover),
.list-table.compact-view .flh-info-bg:not(.row-selected):not(:hover),
.list-table.compact-view .flh-warning-bg:not(.row-selected):not(:hover),
.list-table.compact-view .flh-average-bg:not(.row-selected):not(:hover),
.list-table.compact-view .flh-high-bg:not(.row-selected):not(:hover),
.list-table.compact-view .flh-disaster-bg:not(.row-selected):not(:hover) {
  background: none; }
.list-table.compact-view td {
  box-shadow: inset 0 -1px 0 0 #888888; }
  .list-table.compact-view td.na-bg::before, .list-table.compact-view td.normal-bg::before, .list-table.compact-view td.info-bg::before, .list-table.compact-view td.warning-bg::before, .list-table.compact-view td.average-bg::before, .list-table.compact-view td.high-bg::before, .list-table.compact-view td.disaster-bg::before {
    min-height: 20px;
    box-shadow: inset 0 -1px 0 0 #888888; }
  .list-table.compact-view td.na-bg::after, .list-table.compact-view td.normal-bg::after, .list-table.compact-view td.info-bg::after, .list-table.compact-view td.warning-bg::after, .list-table.compact-view td.average-bg::after, .list-table.compact-view td.high-bg::after, .list-table.compact-view td.disaster-bg::after {
    top: 1px;
    transform: scale(0.8); }
  .list-table.compact-view td .icon-depend-up::before {
    background-position: -208px -731px; }
  .list-table.compact-view td .icon-depend-down::before {
    background-position: -208px -767px; }
  .list-table.compact-view td .icon-wizard-action {
    background: transparent url("../img/icon-sprite.svg?20220519") no-repeat -318px -624px; }
  .list-table.compact-view td .icon-wizard-action {
    background: transparent url("../img/icon-sprite.svg?20220519") no-repeat -165px -624px; }

.filter-highlight-row-cb {
  display: none; }

.status-container .status-na-bg,
.status-container .status-info-bg,
.status-container .status-warning-bg,
.status-container .status-average-bg,
.status-container .status-high-bg,
.status-container .status-disaster-bg {
  border-color: rgba(255, 255, 255, 0.2);
  background-color: #333333;
  color: #ffffff; }

.na-bg,
.normal-bg,
.info-bg,
.average-bg,
.warning-bg,
.high-bg,
.disaster-bg,
.log-na-bg,
.log-info-bg,
.log-warning-bg,
.log-high-bg,
.log-disaster-bg {
  background-color: transparent !important; }
  .na-bg::before,
  .normal-bg::before,
  .info-bg::before,
  .average-bg::before,
  .warning-bg::before,
  .high-bg::before,
  .disaster-bg::before,
  .log-na-bg::before,
  .log-info-bg::before,
  .log-warning-bg::before,
  .log-high-bg::before,
  .log-disaster-bg::before {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    min-height: 28px;
    width: 34px; }
  .na-bg::after,
  .normal-bg::after,
  .info-bg::after,
  .average-bg::after,
  .warning-bg::after,
  .high-bg::after,
  .disaster-bg::after,
  .log-na-bg::after,
  .log-info-bg::after,
  .log-warning-bg::after,
  .log-high-bg::after,
  .log-disaster-bg::after {
    background: url("../img/icon-sprite.svg?20220519") no-repeat;
    content: '';
    position: absolute;
    left: 6px;
    top: 5px;
    width: 22px;
    height: 18px; }

.na-bg::after,
.log-na-bg::after {
  background-position: -106px -411px; }

.normal-bg::after {
  background-position: -76px -411px; }

.info-bg::after,
.log-info-bg::after {
  background-position: -136px -411px; }

.average-bg::after {
  background-position: -196px -410px; }

.warning-bg::after,
.log-warning-bg::after {
  background-position: -166px -411px; }

.high-bg::after,
.log-high-bg::after {
  background-position: -226px -411px; }

.disaster-bg::after,
.log-disaster-bg::after {
  background-position: -256px -411px; }

.na-bg::before,
.log-na-bg::before,
.normal-bg::before {
  background-color: #59db8f; }

.na-bg.blink-hidden::after,
.normal-bg.blink-hidden::after,
.info-bg.blink-hidden::after,
.average-bg.blink-hidden::after,
.warning-bg.blink-hidden::after,
.high-bg.blink-hidden::after,
.disaster-bg.blink-hidden::after {
  content: none; }
.na-bg a.link-action,
.normal-bg a.link-action,
.info-bg a.link-action,
.average-bg a.link-action,
.warning-bg a.link-action,
.high-bg a.link-action,
.disaster-bg a.link-action {
  color: #555555; }

.log-na-bg::before {
  color: #2a353a !important;
  background-color: #97aab3 !important; }

.log-info-bg::before {
  color: #00268e !important;
  background-color: #7499ff !important; }

.log-warning-bg::before {
  color: #734d00 !important;
  background-color: #ffc859 !important; }

.log-high-bg::before {
  color: #52190b !important;
  background-color: #e97659 !important; }

.log-disaster-bg::before {
  color: #4b0c0c !important;
  background-color: #e45959 !important; }

td.na-bg,
td.normal-bg,
td.info-bg,
td.average-bg,
td.warning-bg,
td.high-bg,
td.disaster-bg,
td.log-na-bg,
td.log-info-bg,
td.log-warning-bg,
td.log-high-bg,
td.log-disaster-bg {
  padding-left: 42px;
  color: #000000; }

.notif-body h4 {
  padding-bottom: 3px;
  margin-bottom: -3px; }
.notif-body p {
  margin: .25em 0 2px; }
.notif-body li {
  padding: 0 0 10px 42px; }

.notif-indic {
  width: 34px;
  height: 27px;
  position: relative;
  margin: 0 0 0 -42px; }

td.inactive-bg {
  padding-left: 42px !important;
  color: #000000; }

.inactive-bg, td.inactive-bg {
  background-color: transparent !important; }

.inactive-bg::before {
  content: '';
  width: 34px;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  min-height: 28px;
  background-color: #e45959; }

.inactive-bg::after {
  content: '';
  background: url("../img/icon-sprite.svg?20220519") no-repeat -256px -411px;
  width: 22px;
  height: 18px;
  top: 5px;
  left: 6px;
  position: absolute; }
/* ... */

